[package]
name = "async-h1b"
version = "3.0.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/delta4chat/async-h1"
documentation = "https://docs.rs/async-h1b"
description = "hitdns fork of Asynchronous HTTP 1.1 parser."
keywords = ["async", "http", "stream", "parser", "http1"]
categories = [
  "asynchronous",
  "parser-implementations",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server"
]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>", "Delta4 <delta4chat@localhost>"]
readme = "README.md"
edition = "2018"

[dependencies]
async-channel = "1.5.1"
async-dup = "1.2.2"

#async-global-executor = "2.3.1"

smolscale2 = { version = "0.5.8", features = ["preempt"] }
#smolscale2 = { path = "../smolscale", features = ["preempt"] }

async-io = "1.13.0"
futures-lite = "1.13.0"
http-types = { version = "2.9.0", default-features = false }
httparse = "1.3.4"
log = "0.4.11"
pin-project = "1.0.2"
thiserror = "1.0.22"

[dev-dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
pretty_assertions = "0.6.1"
